Se creó con Colab

--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -64,12 +64,12 @@
         "np.loadtxt(url, delimiter=',')"
       ],
       "metadata": {
-        "id": "JT7apFXXQZIJ",
-        "outputId": "b07a7bf3-4c90-42d4-ac76-3e296ad89133",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 376
-        }
+          "height": 356
+        },
+        "id": "JT7apFXXQZIJ",
+        "outputId": "b07a7bf3-4c90-42d4-ac76-3e296ad89133"
       },
       "execution_count": 3,
       "outputs": [
@@ -95,11 +95,11 @@
         "# 12 meses * 7 años + 3 meses"
       ],
       "metadata": {
-        "id": "rb8T4hJaQqH2",
-        "outputId": "7a182fc5-6784-44bd-e423-fb7e7450341b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rb8T4hJaQqH2",
+        "outputId": "7a182fc5-6784-44bd-e423-fb7e7450341b"
       },
       "execution_count": 4,
       "outputs": [
@@ -126,11 +126,11 @@
         "np.loadtxt(url, delimiter=',', usecols=np.arange(1, 88, 1))"
       ],
       "metadata": {
-        "id": "ZISmKX6NSSQs",
-        "outputId": "07907093-e3e9-43db-91f1-dfb3576e820a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZISmKX6NSSQs",
+        "outputId": "07907093-e3e9-43db-91f1-dfb3576e820a"
       },
       "execution_count": 5,
       "outputs": [
@@ -237,9 +237,147 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "le_XyBvWVpTm",
+        "outputId": "0ba19bea-8fd4-4774-97bf-8b599bac9881",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "path = \"/content/drive/MyDrive/manzanas.csv\"\n",
+        "\n",
+        "datos = np.loadtxt(path, delimiter=',', usecols=np.arange(1, 88, 1))"
+      ],
       "metadata": {
         "id": "ZWMRA6feSbTd"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Saber más"
+      ],
+      "metadata": {
+        "id": "NNQu1VcbXBPw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "UVJQo_DIXDnw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# crea una lista\n",
+        "lista = [1, 2, 3, 4, 5]\n",
+        "\n",
+        "# convierte la lista en un array Numpy\n",
+        "array = np.array(lista)\n",
+        "\n",
+        "print(\"Lista: \", lista)\n",
+        "print(\"Array: \", array)"
+      ],
+      "metadata": {
+        "id": "65yGF4MoW0jS",
+        "outputId": "8845f806-58de-4f61-dad2-a9ce6298398c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lista:  [1, 2, 3, 4, 5]\n",
+            "Array:  [1 2 3 4 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import time\n",
+        "\n",
+        "# crea una lista con 1000000 elementos\n",
+        "lista = list(range(1000000))\n",
+        "\n",
+        "# convierte la lista en un array Numpy\n",
+        "array = np.array(lista)\n",
+        "\n",
+        "# comienza a medir el tiempo para la operación con la lista\n",
+        "start_time = time.time()\n",
+        "\n",
+        "# realiza la operación de elevar al cuadrado cada elemento de la lista\n",
+        "lista_cuadrado = [i**2 for i in lista]\n",
+        "\n",
+        "# detiene el cronómetro\n",
+        "tiempo_lista = time.time() - start_time\n",
+        "\n",
+        "# comienza a medir el tiempo para la operación con el array\n",
+        "start_time = time.time()\n",
+        "\n",
+        "# realiza la operación de elevar al cuadrado cada elemento del array\n",
+        "array_cuadrado = array**2\n",
+        "\n",
+        "# detiene el cronómetro\n",
+        "tiempo_array = time.time() - start_time\n",
+        "\n",
+        "print(\"Tiempo de la operación con la lista: \", tiempo_lista)\n",
+        "print(\"Tiempo de la operación con el array: \", tiempo_array)"
+      ],
+      "metadata": {
+        "id": "iFmuG3M_XK5H",
+        "outputId": "d63a1e38-5e1a-4b6a-9e7c-3d00fc372461",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tiempo de la operación con la lista:  0.0793299674987793\n",
+            "Tiempo de la operación con el array:  0.006705045700073242\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "z5iLhFIsXRLM"
       },
       "execution_count": null,
       "outputs": []
