Se creó con Colab

--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "aS1ry2oIWkI8"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -69,9 +69,9 @@
           "height": 356
         },
         "id": "JT7apFXXQZIJ",
-        "outputId": "b07a7bf3-4c90-42d4-ac76-3e296ad89133"
+        "outputId": "9ff4215c-6c35-47dc-e130-d6c632fbe41b"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "error",
@@ -80,7 +80,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-d87e6716cfa9>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"https://gist.githubusercontent.com/ahcamachod/41b8a65c5e5b58125401deafb68af460/raw/f84320f69efa1cc3e86e1db054422cfa4869c63e/manzanas.csv\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-9-342332436>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"https://gist.githubusercontent.com/ahcamachod/41b8a65c5e5b58125401deafb68af460/raw/f84320f69efa1cc3e86e1db054422cfa4869c63e/manzanas.csv\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/numpy/lib/_npyio_impl.py\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, quotechar, like)\u001b[0m\n\u001b[1;32m   1379\u001b[0m         \u001b[0mdelimiter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'latin1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1380\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1381\u001b[0;31m     arr = _read(fname, dtype=dtype, comment=comment, delimiter=delimiter,\n\u001b[0m\u001b[1;32m   1382\u001b[0m                 \u001b[0mconverters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconverters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mskiplines\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mskiprows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0musecols\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0musecols\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1383\u001b[0m                 \u001b[0munpack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0munpack\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mndmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mndmin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/numpy/lib/_npyio_impl.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(fname, delimiter, comment, quote, imaginary_unit, usecols, skiplines, max_rows, converters, ndmin, unpack, dtype, encoding)\u001b[0m\n\u001b[1;32m   1019\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1020\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mread_dtype_via_object_chunks\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1021\u001b[0;31m             arr = _load_from_filelike(\n\u001b[0m\u001b[1;32m   1022\u001b[0m                 \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdelimiter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomment\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcomment\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquote\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mquote\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1023\u001b[0m                 \u001b[0mimaginary_unit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mimaginary_unit\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mValueError\u001b[0m: could not convert string '' to float64 at row 0, column 1."
@@ -99,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rb8T4hJaQqH2",
-        "outputId": "7a182fc5-6784-44bd-e423-fb7e7450341b"
+        "outputId": "5f7aa0e3-fca7-4673-fed7-1eb481b4129e"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -116,7 +116,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 10
         }
       ]
     },
@@ -130,9 +130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZISmKX6NSSQs",
-        "outputId": "07907093-e3e9-43db-91f1-dfb3576e820a"
+        "outputId": "5f130d62-1437-4139-b57c-892d1b83e0b5"
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,7 +231,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 11
         }
       ]
     },
@@ -246,9 +246,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "le_XyBvWVpTm",
-        "outputId": "0ba19bea-8fd4-4774-97bf-8b599bac9881"
+        "outputId": "54d3c2fe-2e65-4ea4-daf7-a7e4d4f87077"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,7 +269,7 @@
       "metadata": {
         "id": "ZWMRA6feSbTd"
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -307,9 +307,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "65yGF4MoW0jS",
-        "outputId": "8845f806-58de-4f61-dad2-a9ce6298398c"
+        "outputId": "d76c7223-503a-4b6e-c5c3-da95395caba2"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,16 +359,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iFmuG3M_XK5H",
-        "outputId": "d63a1e38-5e1a-4b6a-9e7c-3d00fc372461"
+        "outputId": "db03f645-5be6-4a83-a760-f96c3cb40398"
       },
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tiempo de la operación con la lista:  0.0793299674987793\n",
-            "Tiempo de la operación con el array:  0.006705045700073242\n"
+            "Tiempo de la operación con la lista:  0.07805156707763672\n",
+            "Tiempo de la operación con el array:  0.004289388656616211\n"
           ]
         }
       ]
@@ -385,16 +385,16 @@
     {
       "cell_type": "code",
       "source": [
-        "datos.ndim"
+        "datos.ndim #saber cantidad de dimensiones del array"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "z5iLhFIsXRLM",
-        "outputId": "e99073a4-8dc9-490b-d9c3-7185b02370fc"
+        "outputId": "cc7ccd0b-331d-434f-ba14-6dcde7b7cbbd"
       },
-      "execution_count": 11,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +404,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 17
         }
       ]
     },
@@ -418,9 +418,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O1ErZbrIfbfn",
-        "outputId": "1bdfb890-cfdf-449f-8e9d-bf7242e759c7"
+        "outputId": "324aad96-7667-4526-aed1-a264593d7df2"
       },
-      "execution_count": 12,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,7 +430,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 18
         }
       ]
     },
@@ -444,9 +444,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QKtlA5RBfeyB",
-        "outputId": "f392e848-1e67-49fc-e501-440ba37fe21a"
+        "outputId": "965bc63a-88cd-42ef-96dc-0a69389b248f"
       },
-      "execution_count": 13,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +545,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 19
         }
       ]
     },
@@ -563,7 +563,7 @@
         "id": "bIbyKzyEflVp",
         "outputId": "61263cef-5031-45c1-f2da-b60f64759ade"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,14 +671,63 @@
       "metadata": {
         "id": "iuWvqDz9fvNE"
       },
-      "execution_count": 15,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fechas = datos_transpuestos[:,0] #los : dicen que va a tomar todas las filas, el 0 indica que de la columna cero\n",
+        "fechas"
+      ],
+      "metadata": {
+        "id": "8zabalMBfGvo",
+        "outputId": "5c366bb9-c257-4e13-9117-53fca235114e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  2.96,  86.76, 172.  ,  85.  ,   2.  ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Naranjas"
+      ],
+      "metadata": {
+        "id": "E1KQTX_Peh_k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "url = 'https://gist.githubusercontent.com/ahcamachod/9be09de793dc3bf1e6c3d98eb4e5b1ef/raw/21b85572693200040e11284ef6dcfc3457ec8e11/citrus.csv'\n",
+        "datos = np.loadtxt(url, delimiter=',', usecols=np.arange(1, 6, 1), skiprows=1)"
+      ],
+      "metadata": {
+        "id": "NFKkaxspf1o5"
+      },
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "NFKkaxspf1o5"
+        "id": "2n5wE4EGellS"
       },
       "execution_count": null,
       "outputs": []
