Se creó con Colab

--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2204,10 +2204,10 @@
       ],
       "metadata": {
         "id": "Iy3r8vCuS_F1",
-        "outputId": "de97f492-e4b3-425a-b7ea-c9a9b3cbdc3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "de97f492-e4b3-425a-b7ea-c9a9b3cbdc3d"
       },
       "execution_count": 80,
       "outputs": [
@@ -2229,11 +2229,11 @@
         "pendientes"
       ],
       "metadata": {
-        "id": "1DsgKmeVb4lc",
-        "outputId": "4b996932-0795-4625-9f54-9d8863299fde",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1DsgKmeVb4lc",
+        "outputId": "4b996932-0795-4625-9f54-9d8863299fde"
       },
       "execution_count": 101,
       "outputs": [
@@ -2280,11 +2280,11 @@
         " print(np.linalg.norm(Moscu - (pendientes[i]*x + b)))"
       ],
       "metadata": {
-        "id": "6OhxRoePcG8t",
-        "outputId": "90545ee8-b526-42d3-ae72-6576434dcdb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6OhxRoePcG8t",
+        "outputId": "90545ee8-b526-42d3-ae72-6576434dcdb2"
       },
       "execution_count": 102,
       "outputs": [
@@ -2416,11 +2416,11 @@
         "norma"
       ],
       "metadata": {
-        "id": "PhmvJ4gedMaF",
-        "outputId": "559cf3d9-93f2-41bd-dc3e-dabe57300fca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PhmvJ4gedMaF",
+        "outputId": "559cf3d9-93f2-41bd-dc3e-dabe57300fca"
       },
       "execution_count": 104,
       "outputs": [
@@ -2459,6 +2459,278 @@
           "execution_count": 104
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Exportando archivo generado"
+      ],
+      "metadata": {
+        "id": "CWzMgGxXifrS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pendientes"
+      ],
+      "metadata": {
+        "id": "4aj2EFiCeMpq",
+        "outputId": "297ca23b-5d4b-4a1e-a5ed-c4ec36ffa430",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([9.20426983e-01, 1.31681995e-01, 8.39396675e-01, 7.04859723e-01,\n",
+              "       9.67891997e-01, 9.04224930e-01, 2.92805981e-01, 1.47436397e-01,\n",
+              "       1.41255001e-01, 9.54298798e-01, 4.23553562e-04, 2.90711913e-01,\n",
+              "       4.88770283e-01, 2.99373709e-02, 8.78424596e-01, 1.10642558e-01,\n",
+              "       7.04792156e-01, 2.71999257e-02, 1.89782002e-01, 7.71204661e-01,\n",
+              "       7.78651348e-01, 9.70984855e-01, 4.12550280e-01, 7.95813351e-01,\n",
+              "       4.68710908e-01, 4.42965514e-01, 3.77332458e-01, 8.23278625e-01,\n",
+              "       5.64855680e-01, 1.39978962e-01, 9.65909522e-01, 3.11675740e-02,\n",
+              "       9.28446861e-01, 5.22347325e-01, 4.37533832e-02, 6.96171968e-01,\n",
+              "       2.47592549e-01, 9.89086495e-01, 7.83308458e-01, 4.96989474e-01,\n",
+              "       5.87991767e-01, 4.20941355e-01, 3.87265659e-01, 4.89013737e-01,\n",
+              "       4.10940717e-01, 2.92080440e-01, 6.46017605e-01, 8.71962074e-01,\n",
+              "       9.36198536e-01, 7.36293387e-01, 2.92029263e-01, 7.81799889e-01,\n",
+              "       3.19360082e-01, 9.99664870e-02, 5.51667828e-01, 7.38008276e-01,\n",
+              "       3.05600186e-01, 4.97693117e-01, 8.51174012e-01, 7.58268848e-01,\n",
+              "       3.30622833e-01, 5.46060867e-01, 6.66165355e-01, 9.79667445e-01,\n",
+              "       4.67380342e-01, 5.75362595e-01, 1.32279123e-01, 2.67007411e-01,\n",
+              "       8.45842191e-01, 2.43836787e-01, 5.01065766e-01, 2.05561505e-01,\n",
+              "       2.69849976e-01, 7.02654865e-01, 5.97991727e-01, 2.06239602e-01,\n",
+              "       8.76222287e-01, 2.05321518e-01, 2.16837615e-01, 2.46753615e-02,\n",
+              "       2.80300893e-02, 4.95973316e-01, 4.06532819e-01, 5.73736477e-02,\n",
+              "       8.27224042e-01, 4.22329651e-02, 4.51794371e-02, 3.63530958e-01,\n",
+              "       1.41211140e-01, 4.13577839e-01, 6.93933255e-01, 1.63428167e-01,\n",
+              "       3.05127377e-01, 1.05612662e-01, 9.89137466e-01, 1.46305966e-01,\n",
+              "       1.04106549e-01, 1.27405249e-01, 7.83558749e-01, 1.64264606e-01])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "norma"
+      ],
+      "metadata": {
+        "id": "ksCavlKeioFf",
+        "outputId": "3721d4f2-0e7d-4294-bc95-a58342db6ab6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([414.26794407, 719.64278558, 440.89193389, 488.53226154,\n",
+              "       399.55374973, 419.447033  , 651.58986489, 712.91656814,\n",
+              "       715.55397024, 403.69512197, 776.1926062 , 652.46286251,\n",
+              "       571.57733725, 763.40310701, 427.8476898 , 728.64719735,\n",
+              "       488.55709893, 764.58764733, 694.91006523, 464.56262323,\n",
+              "       461.92740649, 398.61991046, 602.26944829, 455.89958313,\n",
+              "       579.5953791 , 589.94970662, 616.64551151, 446.39015874,\n",
+              "       541.59402876, 716.09868877, 400.15398785, 762.87089197,\n",
+              "       411.73291275, 558.25855578, 757.43012064, 491.73253901,\n",
+              "       670.51089549, 393.21887462, 460.28536403, 568.30499087,\n",
+              "       532.62325954, 598.86148955, 612.5791199 , 571.48029966,\n",
+              "       602.92393637, 651.89229851, 510.4610306 , 429.98034037,\n",
+              "       409.30108604, 477.06896486, 651.91363291, 460.81675799,\n",
+              "       640.54910196, 733.22558606, 546.73943921, 476.44896262,\n",
+              "       646.26337499, 568.02520416, 436.91462873, 469.16787719,\n",
+              "       635.8831209 , 548.93388958, 502.88711303, 396.01539801,\n",
+              "       580.12878521, 537.51107992, 719.38758855, 662.36790213,\n",
+              "       438.71095001, 672.08920766, 566.6849423 , 688.22849917,\n",
+              "       661.17793871, 489.34317762, 528.76874312, 687.9417271 ,\n",
+              "       428.57320604, 688.32999854, 683.46364052, 765.68038314,\n",
+              "       764.22838373, 568.70914218, 604.71756814, 751.55080932,\n",
+              "       445.03851965, 758.08698429, 756.81412676, 622.31014646,\n",
+              "       715.57269193, 601.85174785, 492.5593812 , 706.10375468,\n",
+              "       646.45998963, 730.80348226, 393.20382409, 713.39872135,\n",
+              "       731.44940895, 721.47114371, 460.19724668, 705.74783199])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "datos = np.column_stack((norma, pendientes))\n",
+        "datos"
+      ],
+      "metadata": {
+        "id": "zYwaJWSKit5T",
+        "outputId": "2f56d35f-671a-45de-cfe9-6529983a7aa1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4.14267944e+02, 9.20426983e-01],\n",
+              "       [7.19642786e+02, 1.31681995e-01],\n",
+              "       [4.40891934e+02, 8.39396675e-01],\n",
+              "       [4.88532262e+02, 7.04859723e-01],\n",
+              "       [3.99553750e+02, 9.67891997e-01],\n",
+              "       [4.19447033e+02, 9.04224930e-01],\n",
+              "       [6.51589865e+02, 2.92805981e-01],\n",
+              "       [7.12916568e+02, 1.47436397e-01],\n",
+              "       [7.15553970e+02, 1.41255001e-01],\n",
+              "       [4.03695122e+02, 9.54298798e-01],\n",
+              "       [7.76192606e+02, 4.23553562e-04],\n",
+              "       [6.52462863e+02, 2.90711913e-01],\n",
+              "       [5.71577337e+02, 4.88770283e-01],\n",
+              "       [7.63403107e+02, 2.99373709e-02],\n",
+              "       [4.27847690e+02, 8.78424596e-01],\n",
+              "       [7.28647197e+02, 1.10642558e-01],\n",
+              "       [4.88557099e+02, 7.04792156e-01],\n",
+              "       [7.64587647e+02, 2.71999257e-02],\n",
+              "       [6.94910065e+02, 1.89782002e-01],\n",
+              "       [4.64562623e+02, 7.71204661e-01],\n",
+              "       [4.61927406e+02, 7.78651348e-01],\n",
+              "       [3.98619910e+02, 9.70984855e-01],\n",
+              "       [6.02269448e+02, 4.12550280e-01],\n",
+              "       [4.55899583e+02, 7.95813351e-01],\n",
+              "       [5.79595379e+02, 4.68710908e-01],\n",
+              "       [5.89949707e+02, 4.42965514e-01],\n",
+              "       [6.16645512e+02, 3.77332458e-01],\n",
+              "       [4.46390159e+02, 8.23278625e-01],\n",
+              "       [5.41594029e+02, 5.64855680e-01],\n",
+              "       [7.16098689e+02, 1.39978962e-01],\n",
+              "       [4.00153988e+02, 9.65909522e-01],\n",
+              "       [7.62870892e+02, 3.11675740e-02],\n",
+              "       [4.11732913e+02, 9.28446861e-01],\n",
+              "       [5.58258556e+02, 5.22347325e-01],\n",
+              "       [7.57430121e+02, 4.37533832e-02],\n",
+              "       [4.91732539e+02, 6.96171968e-01],\n",
+              "       [6.70510895e+02, 2.47592549e-01],\n",
+              "       [3.93218875e+02, 9.89086495e-01],\n",
+              "       [4.60285364e+02, 7.83308458e-01],\n",
+              "       [5.68304991e+02, 4.96989474e-01],\n",
+              "       [5.32623260e+02, 5.87991767e-01],\n",
+              "       [5.98861490e+02, 4.20941355e-01],\n",
+              "       [6.12579120e+02, 3.87265659e-01],\n",
+              "       [5.71480300e+02, 4.89013737e-01],\n",
+              "       [6.02923936e+02, 4.10940717e-01],\n",
+              "       [6.51892299e+02, 2.92080440e-01],\n",
+              "       [5.10461031e+02, 6.46017605e-01],\n",
+              "       [4.29980340e+02, 8.71962074e-01],\n",
+              "       [4.09301086e+02, 9.36198536e-01],\n",
+              "       [4.77068965e+02, 7.36293387e-01],\n",
+              "       [6.51913633e+02, 2.92029263e-01],\n",
+              "       [4.60816758e+02, 7.81799889e-01],\n",
+              "       [6.40549102e+02, 3.19360082e-01],\n",
+              "       [7.33225586e+02, 9.99664870e-02],\n",
+              "       [5.46739439e+02, 5.51667828e-01],\n",
+              "       [4.76448963e+02, 7.38008276e-01],\n",
+              "       [6.46263375e+02, 3.05600186e-01],\n",
+              "       [5.68025204e+02, 4.97693117e-01],\n",
+              "       [4.36914629e+02, 8.51174012e-01],\n",
+              "       [4.69167877e+02, 7.58268848e-01],\n",
+              "       [6.35883121e+02, 3.30622833e-01],\n",
+              "       [5.48933890e+02, 5.46060867e-01],\n",
+              "       [5.02887113e+02, 6.66165355e-01],\n",
+              "       [3.96015398e+02, 9.79667445e-01],\n",
+              "       [5.80128785e+02, 4.67380342e-01],\n",
+              "       [5.37511080e+02, 5.75362595e-01],\n",
+              "       [7.19387589e+02, 1.32279123e-01],\n",
+              "       [6.62367902e+02, 2.67007411e-01],\n",
+              "       [4.38710950e+02, 8.45842191e-01],\n",
+              "       [6.72089208e+02, 2.43836787e-01],\n",
+              "       [5.66684942e+02, 5.01065766e-01],\n",
+              "       [6.88228499e+02, 2.05561505e-01],\n",
+              "       [6.61177939e+02, 2.69849976e-01],\n",
+              "       [4.89343178e+02, 7.02654865e-01],\n",
+              "       [5.28768743e+02, 5.97991727e-01],\n",
+              "       [6.87941727e+02, 2.06239602e-01],\n",
+              "       [4.28573206e+02, 8.76222287e-01],\n",
+              "       [6.88329999e+02, 2.05321518e-01],\n",
+              "       [6.83463641e+02, 2.16837615e-01],\n",
+              "       [7.65680383e+02, 2.46753615e-02],\n",
+              "       [7.64228384e+02, 2.80300893e-02],\n",
+              "       [5.68709142e+02, 4.95973316e-01],\n",
+              "       [6.04717568e+02, 4.06532819e-01],\n",
+              "       [7.51550809e+02, 5.73736477e-02],\n",
+              "       [4.45038520e+02, 8.27224042e-01],\n",
+              "       [7.58086984e+02, 4.22329651e-02],\n",
+              "       [7.56814127e+02, 4.51794371e-02],\n",
+              "       [6.22310146e+02, 3.63530958e-01],\n",
+              "       [7.15572692e+02, 1.41211140e-01],\n",
+              "       [6.01851748e+02, 4.13577839e-01],\n",
+              "       [4.92559381e+02, 6.93933255e-01],\n",
+              "       [7.06103755e+02, 1.63428167e-01],\n",
+              "       [6.46459990e+02, 3.05127377e-01],\n",
+              "       [7.30803482e+02, 1.05612662e-01],\n",
+              "       [3.93203824e+02, 9.89137466e-01],\n",
+              "       [7.13398721e+02, 1.46305966e-01],\n",
+              "       [7.31449409e+02, 1.04106549e-01],\n",
+              "       [7.21471144e+02, 1.27405249e-01],\n",
+              "       [4.60197247e+02, 7.83558749e-01],\n",
+              "       [7.05747832e+02, 1.64264606e-01]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "datos.shape"
+      ],
+      "metadata": {
+        "id": "Sj9ASzKXi1Hh",
+        "outputId": "da36c6ac-f6ee-4662-e484-2ee5a771845d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(100, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.savetxt(\"norma_y_pendiente.csv\", datos, delimiter=\",\")"
+      ],
+      "metadata": {
+        "id": "8KD5Ir6Bkvmt"
+      },
+      "execution_count": 112,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
