Se creó con Colab

--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2475,11 +2475,11 @@
         "pendientes"
       ],
       "metadata": {
-        "id": "4aj2EFiCeMpq",
-        "outputId": "297ca23b-5d4b-4a1e-a5ed-c4ec36ffa430",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4aj2EFiCeMpq",
+        "outputId": "297ca23b-5d4b-4a1e-a5ed-c4ec36ffa430"
       },
       "execution_count": 108,
       "outputs": [
@@ -2525,11 +2525,11 @@
         "norma"
       ],
       "metadata": {
-        "id": "ksCavlKeioFf",
-        "outputId": "3721d4f2-0e7d-4294-bc95-a58342db6ab6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ksCavlKeioFf",
+        "outputId": "3721d4f2-0e7d-4294-bc95-a58342db6ab6"
       },
       "execution_count": 109,
       "outputs": [
@@ -2576,11 +2576,11 @@
         "datos"
       ],
       "metadata": {
-        "id": "zYwaJWSKit5T",
-        "outputId": "2f56d35f-671a-45de-cfe9-6529983a7aa1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zYwaJWSKit5T",
+        "outputId": "2f56d35f-671a-45de-cfe9-6529983a7aa1"
       },
       "execution_count": 110,
       "outputs": [
@@ -2701,11 +2701,11 @@
         "datos.shape"
       ],
       "metadata": {
-        "id": "Sj9ASzKXi1Hh",
-        "outputId": "da36c6ac-f6ee-4662-e484-2ee5a771845d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Sj9ASzKXi1Hh",
+        "outputId": "da36c6ac-f6ee-4662-e484-2ee5a771845d"
       },
       "execution_count": 111,
       "outputs": [
@@ -2724,12 +2724,12 @@
     {
       "cell_type": "code",
       "source": [
-        "np.savetxt(\"norma_y_pendiente.csv\", datos, delimiter=\",\")"
+        "np.savetxt(\"/content/drive/MyDrive/norma_y_pendiente.csv\", datos, delimiter=\",\")"
       ],
       "metadata": {
         "id": "8KD5Ir6Bkvmt"
       },
-      "execution_count": 112,
+      "execution_count": 113,
       "outputs": []
     },
     {
